--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,10 @@
 .navbar {
+  padding-top: 0.5rem;
+  padding-left: 2rem;
+  width: 100%;
   height: 10vh;
   background-color: #333333;
+  border-bottom: 1px solid gray;
 }
 .logo {
   height: 7vh;
