--- a/src/pages/AnimePage/AnimePage.css
+++ b/src/pages/AnimePage/AnimePage.css
@@ -1,6 +1,7 @@
 .animes {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding-top: 20px;
   background-color: #333333;
