--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,4 @@
 .sidebar {
-  box-sizing: border-box;
   background-color: #333333;
   height: 50px;
   display: flex;
@@ -7,7 +6,7 @@
   justify-content: start;
 }
 .menu {
-  margin-left: 1rem;
+  margin-left: 2rem;
   font-size: 2rem;
   background: none;
 }
@@ -15,7 +14,7 @@
   background-color: #333333;
   margin-top: 4.5rem;
   width: 250px;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   position: fixed;
@@ -23,22 +22,22 @@
   /* left: -100%; */
   transition: 1000ms;
 }
-.nav active {
+.nav-active {
   left: 0;
-  transform: 400ms;
+  transform: 350ms;
 }
 .side-text {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 8px 0px 8px 8px;
+  padding: 8px 0px 8px 16px;
   list-style: none;
   height: 60px;
 }
 .side-text a {
   color: pink;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 18px;
   width: 95%;
   height: 100%;
   display: flex;
@@ -51,7 +50,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.site-items {
+.side-items {
   width: 100%;
 }
 .side-toggle {
@@ -64,5 +63,5 @@
 }
 
 span {
-  margin-left: 2rem;
+  margin-left: 16px;
 }
