--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -6,9 +6,12 @@
   justify-content: start;
 }
 .menu {
-  margin-left: 2rem;
+  margin-left: 1rem;
   font-size: 2rem;
   background: none;
+  /* display: none; */
+}
+.menu a {
 }
 .nav {
   background-color: #333333;
@@ -20,13 +23,14 @@
   position: fixed;
   top: 0;
   /* left: -100%; */
-  transition: 1000ms;
+  transition: 450ms;
 }
 .nav-active {
   left: 0;
   transform: 350ms;
 }
 .side-text {
+  font-size: 2rem;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -62,6 +66,11 @@
   align-items: center;
 }
 
+.nab span {
+  display: none;
+}
+
 span {
+  font-size: 1.5rem;
   margin-left: 16px;
 }
