--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,8 +6,33 @@
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   background-position: left;
-  color: palevioletred;
+  font-family: tweb;
+  font-weight: bolder;
+}
+
+@font-face {
+  font-family: dosis;
+  src: url(../../../public/fonts/Dosis-Bold.ttf);
+}
+@font-face {
+  font-family: tweb;
+  src: url(../../../public/fonts/TitilliumWeb-Bold.ttf);
+}
+@font-face {
+  font-family: delicious;
+  src: url(../../../public/fonts/DeliciousHandrawn-Regular.ttf);
+}
+.text {
+  width: 48%;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  color: gray;
+  line-height: 2rem;
+}
+.icons {
+  margin-bottom: 2rem;
+  border-bottom: 1px solid gainsboro;
 }
