--- a/src/components/AnimeCard/AnimeCard.css
+++ b/src/components/AnimeCard/AnimeCard.css
@@ -1,1 +1,13 @@
+h2{
+    margin-top: 5px;
+}
 
+.anime-card{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+.imganime{
+    box-shadow: 2px 2px 10px rgba(255, 38, 168, 0.200),  -2px -2px 10px rgba(255, 38, 168, 0.200);
+}
