--- a/src/pages/AnimePage/AnimePage.css
+++ b/src/pages/AnimePage/AnimePage.css
@@ -1,9 +1,9 @@
 .animes {
-  padding-left: 3rem;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding-top: 20px;
   background-color: #333333;
+  text-align: center;
 }
