--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: start;
+  margin-right: 10px;
 }
 .menu {
   margin-left: 1rem;
@@ -14,7 +15,7 @@
 .menu a {
 }
 .nav {
-  background-color: #27272792;
+  background-color: #272727;
   margin-top: 10vh;
   width: 250px;
   height: 45vh;
@@ -24,6 +25,7 @@
   top: 0;
   /* left: -100%; */
   transition: 0.3s;
+  z-index: 1;
 }
 .side-text {
   font-size: 2rem;
